--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
+    "supabase": "^2.76.9",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
